packages/toolkit/components/footer/_footer.scss
/* ==========================================================================
   COMPONENTS / #FOOTER
   ========================================================================== */

.ofh-footer {
  @include print-hide();

  border-top: $ofh-size-4 solid $ofh-color-brand-yellow-3-main;
}

.ofh-footer__main {
  background-color: $ofh-color-background-tertiary;
  padding-bottom: $ofh-size-32;
  padding-top: $ofh-size-32;
}

.ofh-footer__main-inner {
  @include ofh-font('paragraph-sm');

  display: flex;
  flex-direction: column;
  gap: $ofh-size-32;
}

.ofh-footer__meta {
  display: flex;
  flex-direction: column;
  gap: $ofh-size-16;
}

.ofh-footer__links,
.ofh-footer__social-list {
  list-style: none;
  margin: 0;
  padding: 0;
}

.ofh-footer__links {
  display: flex;
  flex-wrap: wrap;
  gap: $ofh-size-16 $ofh-size-32;
}

.ofh-footer__link {
  @include ofh-typography-responsive('paragraph-sm');

  align-items: center;
  color: $ofh-color-foreground-brand-blue-navy;
  display: inline-flex;
  gap: $ofh-size-4;
  text-decoration: underline;

  &:visited {
    color: $ofh-color-foreground-brand-blue-navy;
  }

  &:hover {
    color: $ofh-color-foreground-link-hover;
    text-decoration: none;
  }

  &:focus {
    outline: $ofh-stroke-weight-4 solid $ofh-color-border-feedback-focus;
    outline-offset: $ofh-stroke-weight-4;
    text-decoration: none;
  }
}

.ofh-footer__link-icon {
  color: currentColor;
  flex: 0 0 auto;
}

.ofh-footer__small-print,
.ofh-footer__legal {
  @include ofh-typography-responsive('paragraph-sm');

  color: $ofh-color-foreground-secondary;
  margin-bottom: 0;
}

.ofh-footer__social {
  background-color: $ofh-color-background-secondary;
  padding-bottom: $ofh-size-32;
  padding-top: $ofh-size-32;
}

.ofh-footer__social-inner {
  align-items: center;
  display: flex;
  flex-wrap: wrap;
  gap: $ofh-size-16;
}

.ofh-footer__social-title {
  @include ofh-typography-responsive('heading-xs');

  color: $ofh-color-foreground-brand-blue-navy;
  margin-bottom: 0;

  @include mq($until: tablet) {
    display: none;
  }
}

.ofh-footer__social-list {
  display: flex;
  flex-wrap: wrap;
  gap: $ofh-size-16;
}

.ofh-footer__social-link {
  border-radius: 10000px;
  display: inline-flex;
  line-height: 0;
  position: relative;
  text-decoration: none;

  &:focus {
    outline: $ofh-stroke-weight-4 solid $ofh-color-border-feedback-focus;
    outline-offset: $ofh-stroke-weight-4;
  }

  &:hover {
    .ofh-footer__social-icon--default {
      display: none;
    }

    .ofh-footer__social-icon--hover {
      display: inline-flex;
    }
  }
}

.ofh-footer__social-icon {
  display: inline-flex;
}

.ofh-footer__social-icon--hover {
  display: none;
}

.ofh-footer__social-icon-svg {
  display: block;
}

